--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,8 @@ jobs:
 
       - name: Publish to forgebox
         if: "env.PUBLISH == 'true'"
-        uses: pixl8/github-action-box-publish@minibox-alpha2
+        uses: pixl8/github-action-box-publish@v4
         with:
           forgebox_user: ${{ secrets.FORGEBOX_USER }}
           forgebox_pass: ${{ secrets.FORGEBOX_PASS }}
+          force: "true"
